--- a/components/clinically-proven/statistics.html
+++ b/components/clinically-proven/statistics.html
@@ -7,9 +7,9 @@
 
     <!-- Left Column: Stats -->
     <div class="space-y-8">
-      <h2 class="text-sm font-semibold tracking-wider uppercase mb-8 abc-arizona">Daily Ultimate Essentials</h2>
+      <h2 class="text-sm font-semibold md:text-center tracking-wider uppercase mb-8 abc-arizona">Daily Ultimate Essentials</h2>
 
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-8 md:gap-10">
+      <div class="grid grid-cols-2 gap-8 md:gap-10 ">
         <!-- Stat 1 -->
         <div class="space-y-2">
           <div class="text-6xl md:text-7xl font-bold leading-none">
@@ -63,7 +63,7 @@
 
       <!-- Headline -->
       <div class="font-serif">
-        <h1 class="text-4xl md:text-5xl lg:text-6xl font-normal leading-tight abc-arizona">
+        <h1 class="text-4xl md:text-5xl text-center lg:text-6xl font-normal leading-tight abc-arizona">
           Clinically Proven.<br>
           More Energy.<br>
           A Healthier Gut.*
@@ -78,9 +78,10 @@
           <div class="text-red-900 font-bold text-[12px] md:text-[15px] mb-1">NSF CERTIFIED FOR SPORT</div>
           <div class="text-[#B45309] text-sm mb-2 text-[11px] md:text-[13px]">280+ Substances Tested</div>
         </div>
-        <div class="w-[2px] h-[52px] bg-[linear-gradient(180deg,rgba(245,158,11,0.1)_0%,rgba(245,158,11,0.35)_50%,rgba(245,158,11,0.1)_100%)]">
+        <div class="hidden md:block w-[2px] h-[52px] bg-[linear-gradient(180deg,rgba(245,158,11,0.1)_0%,rgba(245,158,11,0.35)_50%,rgba(245,158,11,0.1)_100%)]">
         </div>
 
+        <div class="block md:hidden w-[100px] h-[2px]  bg-[linear-gradient(180deg,rgba(245,158,11,0.1)_0%,rgba(245,158,11,0.35)_50%,rgba(245,158,11,0.1)_100%)]"></div>
         <div class=" flex flex-col items-start gap-3 text-xs text-gray-700">
 
           <div class="flex flex-row items-center justify-start text-[12px] md:text-[14px] gap-2 mb-1">
