--- a/components/product/product-images/desktop/main-image.html
+++ b/components/product/product-images/desktop/main-image.html
@@ -1,3 +1,3 @@
 <div class="hidden md:block mb-2 rounded-2xl overflow-hidden">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-jar_carousel01.jpg?v=1761040602" alt="" class="cursor-pointer w-full">
+  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-jar_carousel01.jpg?v=1761040602" alt="" class="cursor-pointer w-full" onclick="openImageModal(this.src)">
 </div>
