--- a/components/product/product-images/mobile/images.html
+++ b/components/product/product-images/mobile/images.html
@@ -1,15 +1,31 @@
-<div>
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-jar_carousel01.jpg?v=1761040602" alt="product-img-1">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel01.jpg?v=1761040602" alt="product-img-2">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel02.jpg?v=1761042620" alt="product-img-3">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel03.jpg?v=1761040602" alt="product-img-4">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel04.jpg?v=1761040602" alt="product-img-5">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel05.jpg?v=1761040601" alt="product-img-6">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel06.jpg?v=1761040602" alt="product-img-7">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel07.jpg?v=1761040602" alt="product-img-8">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel02.jpg?v=1761042620" alt="product-img-3">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel03.jpg?v=1761040602" alt="product-img-4">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel04.jpg?v=1761040602" alt="product-img-5">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel05.jpg?v=1761040601" alt="product-img-6">
-  <img src="https://im8health.com/cdn/shop/files/pdp_essentials-jar_carousel07.jpg?v=1761040602" alt="product-img-9">
+<!-- Swiper -->
+<div class="swiper mySwiper2 w-full h-[60vh] ">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"><img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-jar_carousel01.jpg?v=1761040602" alt="product-img-1" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"> <img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel01.jpg?v=1761040602" alt="product-img-2" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"> <img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel02.jpg?v=1761042620" alt="product-img-3" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"><img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel03.jpg?v=1761040602" alt="product-img-4" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"> <img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel04.jpg?v=1761040602" alt="product-img-5" onclick="openImageModal(this.src)  ">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"><img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel05.jpg?v=1761040601" alt="product-img-6" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"> <img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel06.jpg?v=1761040602" alt="product-img-7" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"> <img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel07.jpg?v=1761040602" alt="product-img-8" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"><img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel02.jpg?v=1761042620" alt="product-img-3" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"> <img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel03.jpg?v=1761040602" alt="product-img-4" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"> <img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel04.jpg?v=1761040602" alt="product-img-5" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"> <img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-sachet_carousel05.jpg?v=1761040601" alt="product-img-6" onclick="openImageModal(this.src)">
+    </div>
+    <div class="swiper-slide text-center text-[18px] bg-[#444] flex justify-center items-center"><img class="block w-full h-full object-cover" src="https://im8health.com/cdn/shop/files/pdp_essentials-jar_carousel07.jpg?v=1761040602" alt="product-img-9" onclick="openImageModal(this.src)"></div>
+  </div>
+  <div class="swiper-pagination"></div>
 </div>
